// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current user is not the author of the image Card renders a snapshot properly 1`] = `
<div
  className="column"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  <div
    className="ui card"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <a
      className="ui image"
      href="/images/test"
      onClick={[Function]}
    >
      <img
        alt="Some image here"
        src="undefined/api/detects/test.jpg"
      />
    </a>
    <div
      className="content"
    >
      <div
        style={
          Object {
            "marginBottom": "5px",
          }
        }
      >
        <i
          className="clone icon"
          onClick={[Function]}
          style={
            Object {
              "color": "#33ff33",
            }
          }
        />
        <a
          className="ui image"
          href="/images/test"
          onClick={[Function]}
        >
          <i
            className="hand point up outline icon"
            style={
              Object {
                "color": "#33ff33",
              }
            }
          />
        </a>
      </div>
      <div
        className="description"
      >
        This image may contain: 
        <div
          className="ui label"
          style={
            Object {
              "background": "#11ee66",
            }
          }
        >
          dog
        </div>
        <div
          className="ui label"
          style={
            Object {
              "background": "#11ee66",
            }
          }
        >
          cat
        </div>
      </div>
    </div>
    <div
      className="extra content"
    >
      <div>
        Uploaded by 
        <span
          style={
            Object {
              "color": "red",
            }
          }
        >
          testUser
        </span>
         at 
        2000/01/01 01:02
      </div>
    </div>
  </div>
</div>
`;

exports[`current user is the author of the image Card renders a snapshot properly 1`] = `
<div
  className="column"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  <div
    className="ui card"
    style={
      Object {
        "margin": "auto",
      }
    }
  >
    <a
      className="ui image"
      href="/images/test"
      onClick={[Function]}
    >
      <img
        alt="Some image here"
        src="undefined/api/detects/test.jpg"
      />
    </a>
    <div
      className="content"
    >
      <div
        style={
          Object {
            "marginBottom": "5px",
          }
        }
      >
        <i
          className="clone icon"
          onClick={[Function]}
          style={
            Object {
              "color": "#33ff33",
            }
          }
        />
        <a
          className="ui image"
          href="/images/test"
          onClick={[Function]}
        >
          <i
            className="hand point up outline icon"
            style={
              Object {
                "color": "#33ff33",
              }
            }
          />
        </a>
        <i
          className="trash alternate outline icon"
          onClick={[Function]}
          style={
            Object {
              "color": "red",
            }
          }
        />
      </div>
      <div
        className="description"
      >
        This image may contain: 
        <div
          className="ui label"
          style={
            Object {
              "background": "#11ee66",
            }
          }
        >
          dog
        </div>
        <div
          className="ui label"
          style={
            Object {
              "background": "#11ee66",
            }
          }
        >
          cat
        </div>
      </div>
    </div>
    <div
      className="extra content"
    >
      <div>
        Uploaded by 
        <span
          style={
            Object {
              "color": "red",
            }
          }
        >
          testUser
        </span>
         at 
        2000/01/01 01:02
      </div>
    </div>
  </div>
</div>
`;
